add scrape command and update deployment process for Discord bot

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
+
 {
   "name": "n8n_discord_bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "deploy-commands": "node deploy-commands.js"
   },
   "keywords": [],
   "author": "",
