Add VS Code rules documentation, Taskmaster configuration, PRD for Discord bot, state management, and example PRD template
- Created a comprehensive guidelines document for VS Code rules to ensure consistency and effectiveness.
- Added configuration file for Taskmaster with model settings and global parameters.
- Introduced a Product Requirements Document (PRD) detailing the architecture and development roadmap for a Discord bot integrating with N8N.
- Implemented state management for Taskmaster to track current tags and migration notices.
- Developed an example PRD template to standardize future product documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,20 @@ pids/
 # Build output
 dist/
 build/ 
+
+logs
+dev-debug.log
+# Dependency directories
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
