feat: Implement comprehensive Discord bot event handling and command management
- Added a new client instance for Discord bot with necessary intents and partials.
- Created utility functions for formatting Discord objects (users, channels, messages).
- Developed a unified data structure for various Discord events (messages, reactions, threads).
- Implemented message creation and reaction handling with data forwarding to n8n.
- Established thread event handling (creation, deletion, updates, member joins/leaves).
- Modularized command management with a dedicated command registration and execution system.
- Introduced a file size monitoring script to enforce a 250-line limit across project files.
- Added a pre-commit hook to prevent commits if file size limits are exceeded.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "deploy-commands": "node deploy-commands.js"
+    "deploy-commands": "node deploy-commands.js",
+    "check-file-sizes": "node scripts/file-size-monitor.js --save",
+    "check-file-sizes-strict": "node scripts/file-size-monitor.js --save --exit-on-violation"
   },
   "keywords": [],
   "author": "",
