--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "n8n_discord_bot",
   "version": "1.0.0",
@@ -18,6 +17,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "joi": "^17.13.3",
+    "lodash": "^4.17.21"
   }
 }
