feat: Implement configuration system with hot-reload support
- Added configuration initializer to manage environment and hot-reload.
- Introduced ConfigurationLoader for loading configurations with fallback strategies.
- Created CircuitBreakerManager to manage circuit breakers for endpoints.
- Developed EndpointManager to handle endpoint configurations and routing logic.
- Implemented N8NRouter for routing Discord commands to N8N webhook endpoints with resilience patterns.
- Added RequestHandler for executing HTTP requests with retry logic and response transformation.
- Built RoutingTableBuilder to manage command-to-endpoint mapping.
- Created test-routing.js to validate the enhanced routing logic and configurations.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ LOG_LEVEL=debug
 RATE_LIMIT_PER_USER=10
 RATE_LIMIT_GLOBAL=100
 
+# N8N Router Configuration
+N8N_TIMEOUT=30000
+N8N_RETRY_ATTEMPTS=3
+N8N_MAX_CONCURRENT=10
+
 # N8N Endpoint URLs (optional environment-specific overrides)
 # N8N_SCRAPE_URL=https://your-n8n-instance.com/webhook/scrape
 # N8N_ANALYZE_URL=https://your-n8n-instance.com/webhook/analyze
