--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.8.4",
+    "axios-retry": "^4.5.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "opossum": "^8.5.0"
   }
 }
