feat(errors): Implement comprehensive error handling module
- Added base error classes including BaseError, N8NError, ConfigError, and ValidationError.
- Introduced specialized error classes for Discord, Circuit Breaker, Rate Limiting, Service, and Authentication errors.
- Developed utility functions for error classification, severity assessment, and normalization.
- Created a centralized error handling index for easy exports and usage.

feat(logging): Enhance logging capabilities with correlation support

- Integrated Winston for structured logging with daily rotation and error handling.
- Implemented correlation ID management for tracking requests and interactions.
- Added middleware for correlation context management in Discord commands and HTTP requests.

feat(middleware): Establish robust error handling and validation middleware

- Developed DiscordErrorHandler for managing errors in Discord interactions.
- Created GlobalErrorHandler for uncaught exceptions and promise rejections.
- Implemented ValidationMiddleware for validating and sanitizing user inputs.
- Added common validators for various data types including URL, email, and Discord IDs.

chore: Organize module exports for better accessibility

- Structured exports for error handling, logging, and middleware modules for streamlined usage.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
-    "opossum": "^8.5.0"
+    "opossum": "^8.5.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
